# bar-benchmarks

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  COSTS.md  README.md  action.yml  artifacts.toml  example-benchmarks.md  pyproject.toml  ruff.toml  run_benchmarks.sh
action/: build_catalog.py
batch-runtime/: Dockerfile  build.sh
benchmarks/fightertest-aircraft/: startscript.txt
benchmarks/fightertest-bots/: startscript.txt
benchmarks/fightertest-pathfinding/: startscript.txt
benchmarks/fightertest-tanks/: startscript.txt
benchmarks/lategame1/: startscript.txt
docs/: github-action.md
examples/github-action/: recoil-pr-benchmark.yml  recoilengine-pr-benchmark.yml
scripts/: _catalog.py  artifacts.toml  batch-runtime.Dockerfile  build-bar-content.sh  build-batch-runtime.sh  build-engine.sh  build-startscript.sh  fake-orchestrator.sh  fake-runner.Dockerfile  fake-runner.sh
src/bar_benchmarks/: cli.py  paths.py  types.py
src/bar_benchmarks/orchestrator/: artifacts.py  batch_submitter.py  build.py  catalog.py  lookup.py  poller.py  reconcile.py  run.py  run_info.py
src/bar_benchmarks/poison/: monitor.py
src/bar_benchmarks/stats/: aggregate.py  compare.py  plot.py
src/bar_benchmarks/task/: collector.py  main.py  preflight.py  runner.py
tests/: conftest.py  test_artifacts.py  test_batch_submitter.py  test_build_catalog.py  test_collector.py  test_compare.py  test_lookup.py  test_paths.py  test_plot.py  test_poison_stub.py  test_preflight_stub.py  test_run_info.py  test_runner_extraction.py  test_runner_invocation.py  test_stats.py  test_types.py
(+3 files in other folders)
